fix: adjust cursor styles and dimensions for improved visibility and interaction

--- a/src/components/CursorFollower/CursorFollower.module.scss
+++ b/src/components/CursorFollower/CursorFollower.module.scss
@@ -1,8 +1,8 @@
 @import "../../styles/variables";
 
 .white-circle {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     background-color: $primary-color;
     position: fixed;
     z-index: 998;
@@ -13,8 +13,7 @@
     border-radius: 50%;
     pointer-events: none;
     animation: fadeInCursor 0.5s normal;
-    transition: .5s cubic-bezier(0, 0, 0, 1), .5s cubic-bezier(0, 0, 0, 1);
-    transition-property: width, height;
+    transition: .2s all cubic-bezier(0, 0, 0, 1);
 }
 
 @media only screen and (max-width: 768px) {
