--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,7 +10,7 @@ body {
   font-family: $primary-font;
   scroll-behavior: smooth;
   justify-content: center;
-  cursor: default;
+  cursor: none;
   user-select: none;
 }
 
@@ -25,6 +25,7 @@ body::-webkit-scrollbar::-webkit-scrollbar-thumb:horizontal {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: none;
 }
 
 * {
